# FFmpegPractices

./: README.md  settings.gradle
CompilationScript/: android_ff_build_mac.sh  android_ff_build_ubuntu.sh  android_ff_libx264_mac.sh  android_ff_libx264_ubuntu.sh  android_libx264_mac.sh
app/: build.gradle
app/src/androidTest/java/com/wangyao/ffmpegpractice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wangyao/ffmpegpractice/: FFViewModel.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  fragment_basic_traning_layout.xml  fragment_codec_traning_layout.xml  fragment_hw_codec_layout.xml  fragment_main_layout.xml  fragment_play_audio_layout.xml  fragment_process_audio_layout.xml  fragment_process_filter_layout.xml  fragment_process_image_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wangyao/ffmpegpractice/: ExampleUnitTest.java
basicTraningLib/: build.gradle
basicTraningLib/src/androidTest/java/com/wangyongyao/basictraninglib/: ExampleInstrumentedTest.java
basicTraningLib/src/main/cpp/: BasicJniCall.cpp  CMakeLists.txt  FFGetMediaCodecCopyNew.cpp  FFGetMediaCodecMsg.cpp  FFGetMediaMsg.cpp  FFGetVersion.cpp  FFGetVideoMsg.cpp  FFWriteMediaFilter.cpp  FFWriteMediaToMp4.cpp  native-lib.cpp
basicTraningLib/src/main/cpp/includes/: FFGetMediaCodecCopyNew.h  FFGetMediaCodecMsg.h  FFGetMediaMsg.h  FFGetVersion.h  FFGetVideoMsg.h  FFWriteMediaFilter.h  FFWriteMediaToMp4.h
codecTraningLib/: build.gradle
codecTraningLib/src/main/cpp/: CMakeLists.txt  CodecJniCall.cpp  CopyMeidaFile.cpp  GetMediaMsg.cpp  GetMediaTimeBase.cpp  GetMeidaTimeStamp.cpp  H264ToMP4.cpp  MergeAudio.cpp  MergeVideo.cpp  PeelAudioOfMedia.cpp  RecodecVideo.cpp  SplitVideoOfMedia.cpp
codecTraningLib/src/main/cpp/includes/: CopyMeidaFile.h  GetMediaMsg.h  GetMediaTimeBase.h  GetMeidaTimeStamp.h  H264ToMP4.h  MergeAudio.h  MergeVideo.h  PeelAudioOfMedia.h  RecodecVideo.h  SplitVideoOfMedia.h
commonLib/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hwCodecLib/: build.gradle
hwCodecLib/src/main/cpp/: CMakeLists.txt  ExtactorMuxerMp4.cpp  HwCodecJniCall.cpp  HwDeCodec.cpp  HwEnCodec.cpp  HwExtractor.cpp  HwMuxer.cpp  MediaExtratorDecodec.cpp  MediaExtratorDecodecEncodec.cpp  MediaTransMuxer.cpp  ProcessDeCodec.cpp  ProcessEnCodec.cpp  ProcessExtractor.cpp  ProcessMuxer.cpp
hwCodecLib/src/main/cpp/includes/: BenchmarkCommon.h  ExtactorMuxerMp4.h  HwDeCodec.h  HwEnCodec.h  HwExtractor.h  HwMuxer.h  MediaExtratorDecodec.h  MediaExtratorDecodecEncodec.h  MediaTransMuxer.h  ProcessDeCodec.h  ProcessEnCodec.h  ProcessExtractor.h  ProcessMuxer.h  Stats.h
hwCodecLib/src/main/cpp/utils/: BenchmarkCommon.cpp  Stats.cpp  Timers.cpp
playAudioLib/src/main/cpp/: CMakeLists.txt  FFmpegOpenSLPlayer.cpp  OpenslHelper.cpp  PlayAudioJniCall.cpp  PlayAudioTrack.cpp  PlayOpenSL.cpp
playAudioLib/src/main/cpp/includes/: FFmpegOpenSLPlayer.h  OpenslHelper.h  PlayAudioTrack.h  PlayOpenSL.h
playMediaLib/: build.gradle
playMediaLib/src/main/cpp/: AndroidThreadManager.cpp  CMakeLists.txt  DeadLockDetect.cpp  FFGLPlayer.cpp  FFMediaPlayer.cpp  FFSurfacePlayer.cpp  FFmpegOpenSLPlayer.cpp  OpenglesTexureVideoRender.cpp  PlayAudioJniCall.cpp  PlayAudioTrack.cpp  PlayMediaJniCall.cpp  WYMediaPlayer.cpp
playMediaLib/src/main/cpp/WyyEGL/: EGLSurfaceViewVideoRender.cpp  EglCore.cpp  EglSurfaceBase.cpp  WindowSurface.cpp
playMediaLib/src/main/cpp/includes/: AndroidThreadManager.h  EGLSurfaceViewVideoRender.h  FFGLPlayer.h  FFMediaPlayer.h  FFSurfacePlayer.h  FFmpegOpenSLPlayer.h  OpenglesTexureVideoRender.h  PlayAudioTrack.h  ThreadSafeQueue.h  WYMediaPlayer.h
playMediaLib/src/main/cpp/looper/: Looper.cpp
processAudioLib/: build.gradle
processAudioLib/src/main/cpp/: CMakeLists.txt  ProcessAudioJniCall.cpp  SaveAACOfMedia.cpp  SaveWavOfMedia.cpp
processAudioLib/src/main/cpp/includes/: BasicCommon.h  SavePCMOfMeida.h  x264_config.h
processFilterLib/: build.gradle
processFilterLib/src/main/cpp/: CMakeLists.txt  ProcessFilterJniCall.cpp  ProcessVideoFilter.cpp  ProcessVideoToFilm.cpp  ProcessVideoToPNG.cpp  SavePCMOfMeida.cpp
processFilterLib/src/main/cpp/includes/: ProcessVideoFilter.h  ProcessVideoToFilm.h  ProcessVideoToPNG.h  SaveAACOfMedia.h  SaveWavOfMedia.h
processImageLib/: build.gradle
processImageLib/src/main/cpp/: CMakeLists.txt  ProcessImageJniCall.cpp  SaveBMPSwsFromVideo.cpp  SaveGifOfVideo.cpp  SaveGifSwsOfVideo.cpp  SaveImage2Video.cpp  SaveJPGFromVideo.cpp  SaveJPGSwsFromVideo.cpp  SavePNGSwsFromVideo.cpp  SaveYUVFromVideo.cpp  TaskThreadManager.cpp  ThreadPoolUtils.cpp  WriteYUVFrame.cpp
processImageLib/src/main/cpp/includes/: SaveBMPSwsFromVideo.h  SaveGifOfVideo.h  SaveGifSwsOfVideo.h  SaveImage2Video.h  SaveJPGFromVideo.h  SaveJPGSwsFromVideo.h  SavePNGSwsFromVideo.h  SaveYUVFromVideo.h  TaskThreadManager.h  ThreadPoolUtils.h  WriteYUVFrame.h
(+41 files in other folders)
